--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       dockerfile: ./Dockerfile
       args:
         STATIC_URL: '/static/'
+      network: host
     restart: unless-stopped
     networks:
       - saleor-backend-tier
@@ -33,6 +34,7 @@ services:
     build:
       context: ./saleor-storefront
       dockerfile: ./Dockerfile.dev
+      network: host
     ports:
       - 3000:3000
     restart: unless-stopped
@@ -45,6 +47,7 @@ services:
     build:
       context: ./saleor-dashboard
       dockerfile: ./Dockerfile.dev
+      network: host
     ports:
       - 9000:9000
     restart: unless-stopped
@@ -114,7 +117,7 @@ services:
 
   mailhog:
     image: mailhog/mailhog
-    ports: 
+    ports:
       - 1025:1025 # smtp server
       - 8025:8025 # web ui. Visit http://localhost:8025/ to check emails
     restart: unless-stopped
